# RuNeVis

./: .gitignore  .markdownlint.yaml  Cargo.toml  README.md
.github/workflows/: code-quality.yml  rust.yml
coverage/: cobertura.xml
examples/: benchmark.rs  create_large_test_netcdf.rs  create_test_netcdf.rs  test_zarr.rs  test_zarr_metadata.rs
runevis/: Cargo.toml
runevis/src/: main.rs
src/: cli.rs  data_source.rs  errors.rs  lib.rs  main.rs  metadata.rs  netcdf_io.rs  parallel.rs  statistics.rs  utils.rs  zarr_io.rs  zarr_io_broken.rs  zarr_io_old.rs
src/statistics/: mod.rs  netcdf.rs  operations.rs  parallel.rs  zarr.rs
tests/: integration_test.rs  unit_tests.rs  zarr_tests.rs
