[package]
name = "ru_ne_vis"
version = "1.1.0"
edition = "2021"
rust-version = "1.77.0"
description = "A comprehensive Rust library for analyzing NetCDF and Zarr files with parallel statistical computations"
license = "MIT"
repository = "https://github.com/user/RuNeVis"
keywords = ["netcdf", "zarr", "statistics", "parallel", "scientific"]
categories = ["science", "algorithms", "concurrency"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# NetCDF bindings - 0.11.1+ required; 0.11.0 used ndarray 0.15 which is incompatible with 0.11.1+
netcdf = { version = "0.11.1", features = ["static"] }

# CLI argument parsing - update to latest 4.5.x, keeping derive feature
clap = { version = "4.5.40", features = ["derive"] }

# N-dimensional arrays - must match the version used by the resolved netcdf 0.11.x crate.
# netcdf >=0.11.1 depends on ndarray 0.17; 0.15.x is no longer compatible.
ndarray = { version = "0.17", features = ["rayon"] }

# Date and time handling - latest 0.4.x
chrono = { version = "0.4.41", default-features = false, features = ["clock", "std"] }

# Parallel processing - latest 1.10.x
rayon = "1.10.0"

# CPU core detection
num_cpus = "1.16.0"

# Zarr support (basic framework for future implementation)
serde_json = "1.0"
tokio = { version = "1.0", features = ["rt", "rt-multi-thread", "macros"] }
futures = "0.3"
async-stream = "0.3"
async-trait = "0.1"

[dev-dependencies]
# Temporary file handling for tests - latest 3.20.x
tempfile = "3.20.0"
# Async test runtime
tokio-test = "0.4"

[[example]]
name = "benchmark"
path = "examples/benchmark.rs"

[[example]]
name = "create_test_netcdf"
path = "examples/create_test_netcdf.rs"

[[example]]
name = "create_large_test_netcdf"
path = "examples/create_large_test_netcdf.rs"

[[example]]
name = "test_zarr"
path = "examples/test_zarr.rs"

[[example]]
name = "test_zarr_metadata"
path = "examples/test_zarr_metadata.rs"
